# Secure-image-sharing-system

./: .gitignore  Cargo.toml  README.markdown  documentation.txt
Backend/: Cargo.toml
Backend/migrations/: 20250530000001_initial_schema.sql
Backend/src/: main.rs
Backend/src/config/: cors.rs  mod.rs  server.rs
Backend/src/database/: connection.rs  mod.rs  setup.rs
Backend/src/dto/: common_response_dto.rs  image_request_dto.rs  image_response_dto.rs  mod.rs  shared_link_request_dto.rs  shared_link_response_dto.rs  user_request_dto.rs  user_response_dto.rs
Backend/src/handlers/: health.rs  routes.rs
Backend/src/models/: mod.rs  shared_links.rs  users.rs
Frontend/: Cargo.toml
Shared/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/services/: api.js
