[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2.1"
serde_json = "1.0"