[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-cors = "0.7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2.1"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# Security
argon2 = "0.5"
jsonwebtoken = "9.2"

# Logging
log = "0.4"
env_logger = "0.11.8"